2004-01-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-text.cpp (sp_text_font_style_to_lookup),
	src/dialogs/text-edit.cpp (sp_text_edit_dialog_font_style_to_lookup):
	Move this duplicated function to src/libnrtype/font-style-to-pos.cpp
	as font_style_to_pos, rewriting & fixing its bugs in the process.
	Adjust callers.
	* src/libnrtype/font-style-to-pos.cpp, src/libnrtype/font-style-to-pos.h:
	New files.
	* src/libnrtype/Makefile.am: Mention the new files.
	* src/libnrtype/nr-type-pos-def.h: Make the default constructor fill in
	sensible values.
	Add constants for CSS weight numbers.

2004-01-13 MenTaLguY  <mental@rydia.net>

	* src/object-ui.cpp: 'Fill Settings' -> 'Fill and Stroke'

	* src/FilePath.cpp, src/FilePath.h: removed until we can rethink
	  the file stuff

2004-01-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/nr-type-directory.h,
	src/libnrtype/nr-type-directory.cpp (nr_type_directory_lookup_fuzzy):
	Change second arg from char const* to NRTypePosDef.
	(nr_type_calculate_position) Move to nr-type-pos-def.cpp as implicit
	NRTypePosDef constructor from string.
	* src/libnrtype/nr-typeface.h: NRTypePosDef changed from struct to class.
	* src/libnrtype/nr-type-pos-def.h, src/libnrtype/nr-type-pos-def.cpp:
	new files.
	* src/libnrtype/Makefile.am: Mention the new files.

	* src/sp-text.cpp (sp_text_font_style_to_lookup): Fix segfault I
	introduced, reported by ishmal.

2004-01-12  bulia byak <bulia@users.sourceforge.net>

	* src/sp-rect.cpp: Removed coordinates from rect description

	* src/selection-chemistry.cpp: Delete fix from sodipodi, more statusbar diagnostics

	* src/prefs-utils.cpp,h: New functions for setting/getting string values

	* src/dialogs/export.cpp: Export dialog tracks selection and document changes (fix for
	853849). Export area, dpi remembered in prefs. Misc fixes and cleanups

	* src/preferences-skeleton.h: New options for export: exportarea, defaultxdpi
